# firebase-app-wrapper

./: CMakeLists.txt  firebase.i  native-firebase-vendored.podspec  native-firebase.podspec  native_firebase.ini  swig-config.js
bindings/auto/3.7.x/: jsb_native_firebase_auto.cpp  jsb_native_firebase_auto.h
bindings/auto/3.x.x_3.6.x/: jsb_native_firebase_auto.cpp  jsb_native_firebase_auto.h  jsb_native_firebase_auto.json
cpp/: firebase_app.cpp
includes/: firebase_app.h
ios/: CMakeLists.txt
